--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -9,11 +9,9 @@
 </style>
 
 <div class="example-wrapper">
-    {% if controller_name %}
-    <h1>{{ controller_name }}✅</h1>
-    {% else %}
-    <h1>{{author}}</h1>
-    {% endif %}
+
+    <h1 class="bg-blue-500">WOOHOOO</h1>
+
 
     This friendly message is coming from:
     <ul>
