--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -22,6 +22,12 @@
             </a>
         </div>
     {% endif %}
+
+    <div>
+        <a href="/movies/create">
+            create new movie
+        </a>
+    </div>
     
     <div class="md:grid lg:grid-cols-3 gap-20 w-4/5 mx-auto py-15 ">
         <!-- Review Item -->
